# mcp

./: .gitignore  README.md
evalbot/: Dockerfile  README.md  config.template.yaml  pyproject.toml
evalbot/src/evalbot/: client.py  config.py  model.py  server.py
test/: main.py
